fix ratios on orderbook, fix skeleton height and gap

--- a/packages/frontend/app/routes/trade/orderbook/orderbook.module.css
+++ b/packages/frontend/app/routes/trade/orderbook/orderbook.module.css
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: center;
     gap: 0.25rem;
+    gap: 4px;
 }
 
 .orderBookContainer {
@@ -54,4 +55,8 @@
     background-color: var(--dark4);
     z-index: -1;
     opacity: 0;
+}
+
+.skeletonWrapper .orderRowWrapper {
+    overflow: hidden;
 }
